--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: Index Jekyll Theme
 
-url: https://daniepersia.github.io
-baseurl: /
+url: https://index.jekyllthemes.io
+baseurl: 
 
 collections:
   pages:
