--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -16,7 +16,9 @@ menu_settings:
     - title: 'Brazil LAB'
       url: '/brazilLAB'
     - title: 'Hearing Lima'
-      url: '/espalhelima'   
+      url: '/espalhelima' 
+    - title: 'Brazil LAB'
+      url: '/brazilLAB'
     - title: 'Asymptote'
       url: '/asymptote'   
     - title: 'Contact'
