--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,12 +13,10 @@ menu_settings:
       url: '/'
     - title: 'Translations'
       url: '/trans'   
-    - title: 'Brazil LAB'
+    - title: 'LAB'
       url: '/brazilLAB'
     - title: 'Hearing Lima'
       url: '/espalhelima' 
-    - title: 'Brazil LAB'
-      url: '/brazilLAB'
     - title: 'Asymptote'
       url: '/asymptote'   
     - title: 'Contact'
