--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,11 +12,11 @@ menu_settings:
     - title: 'About'
       url: '/'
     - title: 'Translations'
-      url: '/trans'   
-    - title: 'LAB'
+      url: '/translations'   
+    - title: 'Brazil LAB'
       url: '/brazilLAB'
     - title: 'Hearing Lima'
-      url: '/espalhelima' 
+      url: '/hearinglima' 
     - title: 'Asymptote'
       url: '/asymptote'   
     - title: 'Contact'
