--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ menu_settings:
     - title: 'Translations'
       url: '/translations'   
     - title: 'Brazil LAB'
-      url: '/Brazil-LAB'
+      url: '/brazillab'
     - title: 'Hearing Lima'
       url: '/hearinglima' 
     - title: 'Asymptote'
