--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 basic_settings:
   site_title: Daniel Persia
   site_tagline: Writer. Translator. Innovator.
-  favicon_image: /images/favicon.png
+  favicon_image: /images/GlobalTranslation.png
 
 header_settings:
   logo_image: 
