--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -13,8 +13,8 @@ menu_settings:
       url: '/'
     - title: 'Translations'
       url: '/translations'   
-    - title: 'Brazil LAB'
-      url: '/brazillab'
+    - title: 'Writing'
+      url: '/writing'
     - title: 'Asymptote'
       url: '/asymptote'   
     - title: 'Contact'
