--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Daniel Persia
-  site_tagline: Writer. Translator. Innovator.
+  site_tagline: dpersia16[at]gmail.com
   favicon_image: /images/World.png
 
 header_settings:
