--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -56,7 +56,7 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: 'https://www.linkedin.com/in/danielpersia'
+  linkedin_url: 'https://www.linkedin.com/in/dpersia'
 
 color_settings:
   background_color: '#ffffff'
